iparser.output
   0  $accept : %entry% $end

   1  program : opt_decl_list

   2  opt_decl_list :
   3                | decl_list

   4  decl_list : decl
   5            | decl_list decl

   6  decl : type_decl
   7       | rel_decl
   8       | global_var_decl
   9       | proc_decl
  10       | coercion_decl

  11  type_decl : data_decl
  12            | class_decl
  13            | enum_decl
  14            | view_decl

  15  global_var_decl : GLOBAL local_variable_type variable_declarators SEMICOLON

  16  class_decl : CLASS IDENTIFIER extends_opt OBRACE member_list_opt CBRACE

  17  extends_opt :
  18              | EXTENDS IDENTIFIER

  19  member_list_opt :
  20                  | member_list

  21  member_list : member
  22              | member_list member

  23  member : typ IDENTIFIER SEMICOLON
  24         | INV disjunctive_constr SEMICOLON
  25         | proc_decl
  26         | constructor_decl

  27  data_decl : data_header data_body

  28  data_header : DATA IDENTIFIER

  29  data_body : OBRACE opt_field_list CBRACE

  30  opt_field_list :
  31                 | field_list opt_semicolon

  32  opt_semicolon :
  33                | SEMICOLON

  34  field_list : typ IDENTIFIER
  35             | field_list SEMICOLON typ IDENTIFIER

  36  enum_decl : enum_header enum_body

  37  enum_header : ENUM IDENTIFIER

  38  enum_body : OBRACE enum_list CBRACE

  39  enum_list : enumerator
  40            | enum_list COMMA enumerator

  41  enumerator : IDENTIFIER
  42             | IDENTIFIER EQ LITERAL_INTEGER

  43  view_decl : view_header EQEQ view_body opt_inv SEMICOLON
  44            | view_header EQ error

  45  opt_inv :
  46          | INV pure_constr opt_branches

  47  opt_branches :
  48               | AND OSQUARE branches CSQUARE

  49  branches : branch
  50           | branch SEMICOLON branches

  51  opt_branch :
  52             | DOUBLEQUOTE IDENTIFIER DOUBLEQUOTE COLON

  53  branch : DOUBLEQUOTE IDENTIFIER DOUBLEQUOTE COLON pure_constr

  54  view_header : IDENTIFIER LT opt_ann_cid_list GT

  55  cid : IDENTIFIER
  56      | IDENTIFIER PRIME
  57      | RES
  58      | SELF
  59      | THIS

  60  view_body : formulas

  61  heap_arg_list : heap_arg_list_aux

  62  heap_arg_list_aux : heap_arg
  63                    | heap_arg_list_aux COMMA heap_arg

  64  heap_arg : cexp

  65  opt_heap_arg_list2 :
  66                     | heap_arg_list2

  67  heap_arg_list2 : heap_arg2
  68                 | heap_arg_list2 COMMA heap_arg2

  69  heap_arg2 : IDENTIFIER EQ cexp

  70  opt_cid_list :
  71               | cid_list

  72  cid_list : cid
  73           | cid_list COMMA cid

  74  opt_ann_cid_list :
  75                   | ann_cid_list

  76  ann_cid_list : ann_cid
  77               | ann_cid_list COMMA ann_cid

  78  ann_cid : opt_branch cid opt_ann_list

  79  opt_ann_list :
  80               | ann_list

  81  ann_list : ann
  82           | ann_list ann

  83  ann : AT IN
  84      | AT IDENTIFIER

  85  opt_sq_clist : sq_clist
  86               |

  87  sq_clist : OSQUARE opt_cid_list CSQUARE

  88  formulas : extended_constr
  89           | disjunctive_constr

  90  extended_constr : r_constr
  91                  | extended_constr ORWORD r_constr

  92  r_constr_opt :
  93               | r_constr
  94               | OSQUARE extended_constr CSQUARE

  95  impl_list : pure_constr LEFTARROW extended_constr SEMICOLON
  96            | impl_list pure_constr LEFTARROW extended_constr SEMICOLON

  97  r_constr : CASE OBRACE impl_list CBRACE
  98           | sq_clist one_constr r_constr_opt

  99  disjunctive_constr : one_constr
 100                     | disjunctive_constr ORWORD one_constr
 101                     | error

 102  one_constr : core_constr
 103             | OPAREN EXISTS opt_cid_list COLON core_constr CPAREN

 104  core_constr : heap_constr flows_and_branches
 105              | pure_constr flows_and_branches
 106              | heap_constr AND pure_constr flows_and_branches

 107  flows_and_branches : flow_constraints opt_branches
 108                     | opt_branches

 109  flow_constraints : AND FLOW IDENTIFIER

 110  heap_constr : OPAREN heap_rd CPAREN SEMICOLON heap_rw
 111              | OPAREN heap_rd CPAREN
 112              | heap_rw

 113  heap_rd : heap_rd STAR simple_heap_constr_imm
 114          | heap_rd AND simple_heap_constr_imm
 115          | simple_heap_constr_imm

 116  heap_rw : heap_wr STAR OPAREN heap_constr CPAREN
 117          | heap_wr

 118  heap_wr : heap_wr STAR simple_heap_constr
 119          | heap_wr STAR simple_heap_constr_imm
 120          | simple_heap_constr
 121          | simple_heap_constr_imm

 122  simple_heap_constr_imm : cid COLONCOLON IDENTIFIER LT heap_arg_list GT IMM opt_formula_label
 123                         | cid COLONCOLON IDENTIFIER LT opt_heap_arg_list2 GT IMM opt_formula_label

 124  simple_heap_constr : cid COLONCOLON IDENTIFIER LT heap_arg_list GT opt_formula_label
 125                     | cid COLONCOLON IDENTIFIER LT opt_heap_arg_list2 GT opt_formula_label

 126  pure_constr : simple_pure_constr opt_formula_label
 127              | pure_constr AND simple_pure_constr

 128  disjunctive_pure_constr : pure_constr OR pure_constr
 129                          | disjunctive_pure_constr OR pure_constr

 130  simple_pure_constr : lbconstr
 131                     | OPAREN disjunctive_pure_constr CPAREN
 132                     | EXISTS OPAREN opt_cid_list COLON pure_constr CPAREN
 133                     | FORALL OPAREN opt_cid_list COLON pure_constr CPAREN
 134                     | TRUE
 135                     | FALSE
 136                     | cid
 137                     | NOT cid
 138                     | NOT OPAREN pure_constr CPAREN

 139  lbconstr : bconstr
 140           | lbconstr NEQ cexp_list
 141           | lbconstr EQ cexp_list
 142           | lbconstr LT cexp_list
 143           | lbconstr LTE cexp_list
 144           | lbconstr GT cexp_list
 145           | lbconstr GTE cexp_list

 146  bconstr : cexp_list LT cexp_list
 147          | cexp_list LTE cexp_list
 148          | cexp_list GT cexp_list
 149          | cexp_list GTE cexp_list
 150          | cexp_list EQ cexp_list
 151          | cexp_list NEQ cexp_list
 152          | cid IN cexp
 153          | cid NOTIN cexp
 154          | cexp SUBSET cexp
 155          | BAGMAX OPAREN cid COMMA cid CPAREN
 156          | BAGMIN OPAREN cid COMMA cid CPAREN
 157          | cexp INLIST cexp
 158          | cexp NOTINLIST cexp
 159          | ALLN OPAREN cexp COMMA cexp CPAREN
 160          | PERM OPAREN cexp COMMA cexp CPAREN
 161          | IDENTIFIER OPAREN opt_cexp_list CPAREN

 162  cexp : additive_cexp
 163       | OBRACE opt_cexp_list CBRACE
 164       | UNION OPAREN opt_cexp_list CPAREN
 165       | INTERSECT OPAREN opt_cexp_list CPAREN
 166       | DIFF OPAREN cexp COMMA cexp CPAREN
 167       | OLIST opt_cexp_list CLIST
 168       | cexp COLONCOLONCOLON cexp
 169       | TAIL OPAREN cexp CPAREN
 170       | APPEND OPAREN opt_cexp_list CPAREN
 171       | REVERSE OPAREN cexp CPAREN
 172       | cid OSQUARE cexp CSQUARE

 173  additive_cexp : multiplicative_cexp
 174                | additive_cexp PLUS multiplicative_cexp
 175                | additive_cexp MINUS multiplicative_cexp

 176  multiplicative_cexp : unary_cexp
 177                      | multiplicative_cexp STAR unary_cexp
 178                      | multiplicative_cexp DIV unary_cexp

 179  unary_cexp : cid
 180             | LITERAL_INTEGER
 181             | LITERAL_FLOAT
 182             | OPAREN cexp CPAREN
 183             | NULL
 184             | MINUS unary_cexp
 185             | MAX OPAREN cexp COMMA cexp CPAREN
 186             | MIN OPAREN cexp COMMA cexp CPAREN
 187             | HEAD OPAREN cexp CPAREN
 188             | LENGTH OPAREN cexp CPAREN
 189             | cid OSQUARE cexp CSQUARE

 190  opt_cexp_list :
 191                | cexp_list

 192  cexp_list : cexp_list_rec

 193  cexp_list_rec : cexp
 194                | cexp_list_rec COMMA cexp

 195  rel_decl : rel_header EQEQ rel_body DOT
 196           | rel_header EQ error

 197  typed_id_list_opt :
 198                    | typ IDENTIFIER
 199                    | typ IDENTIFIER COMMA typed_id_list_opt

 200  rel_header : REL IDENTIFIER OPAREN typed_id_list_opt CPAREN

 201  rel_body : pure_constr

 202  proc_decl : proc_header proc_body
 203            | proc_header

 204  proc_header : typ IDENTIFIER OPAREN opt_formal_parameter_list CPAREN opt_throws opt_spec_list
 205              | VOID IDENTIFIER OPAREN opt_formal_parameter_list CPAREN opt_throws opt_spec_list

 206  constructor_decl : constructor_header proc_body
 207                   | constructor_header

 208  constructor_header : IDENTIFIER OPAREN opt_formal_parameter_list CPAREN opt_throws opt_spec_list

 209  coercion_decl : COERCION opt_name disjunctive_constr coercion_direction disjunctive_constr SEMICOLON

 210  coercion_direction : LEFTARROW
 211                     | EQUIV
 212                     | RIGHTARROW

 213  opt_throws :
 214             | THROWS cid_list

 215  opt_name :
 216           | DOUBLEQUOTE IDENTIFIER DOUBLEQUOTE

 217  opt_spec_list :
 218                | spec_list

 219  spec_list : spec
 220            | spec_list spec

 221  spec : REQUIRES opt_sq_clist disjunctive_constr spec
 222       | REQUIRES opt_sq_clist disjunctive_constr OBRACE spec_list CBRACE
 223       | ENSURES opt_label disjunctive_constr SEMICOLON
 224       | CASE OBRACE branch_list CBRACE
 225       | VARIANCE OPAREN integer_literal CPAREN measures escape_conditions spec

 226  measures :
 227           | OSQUARE variance_list CSQUARE

 228  variance_list : cexp_with_bound variance_list_p

 229  variance_list_p :
 230                  | COMMA cexp_with_bound variance_list_p

 231  cexp_with_bound : cexp
 232                  | cexp AT cexp

 233  escape_conditions :
 234                    | ESCAPE OSQUARE condition_list CSQUARE

 235  condition_list : pure_constr

 236  branch_list : pure_constr LEFTARROW spec_list
 237              | branch_list pure_constr LEFTARROW spec_list

 238  opt_formal_parameter_list :
 239                            | formal_parameter_list

 240  formal_parameter_list : formal_parameter
 241                        | formal_parameter_list COMMA formal_parameter

 242  formal_parameter : fixed_parameter

 243  fixed_parameter : opt_parameter_modifier typ IDENTIFIER

 244  opt_parameter_modifier :
 245                         | REF

 246  proc_body : block

 247  typ : non_array_type
 248      | array_type

 249  non_array_type : INT
 250                 | FLOAT
 251                 | BOOL
 252                 | IDENTIFIER

 253  array_type : array_type rank_specifier
 254             | non_array_type rank_specifier

 255  rank_specifier : OSQUARE comma_list_opt CSQUARE

 256  comma_list_opt :
 257                 | comma_list

 258  comma_list : COMMA
 259             | comma_list COMMA

 260  block : OBRACE opt_statement_list CBRACE

 261  opt_statement_list :
 262                     | statement_list

 263  statement_list : statement
 264                 | statement_list statement
 265                 | error

 266  statement : declaration_statement
 267            | labeled_valid_declaration_statement

 268  declaration_statement : local_variable_declaration SEMICOLON
 269                        | local_constant_declaration SEMICOLON

 270  local_variable_type : typ

 271  local_variable_declaration : local_variable_type variable_declarators

 272  local_constant_declaration : CONST local_variable_type constant_declarators

 273  variable_declarators : variable_declarator
 274                       | variable_declarators COMMA variable_declarator

 275  variable_declarator : IDENTIFIER EQ variable_initializer
 276                      | IDENTIFIER

 277  variable_initializer : expression

 278  constant_declarators : constant_declarator
 279                       | constant_declarators COMMA constant_declarator

 280  constant_declarator : IDENTIFIER EQ constant_expression

 281  labeled_valid_declaration_statement : IDENTIFIER COLON valid_declaration_statement
 282                                      | valid_declaration_statement

 283  valid_declaration_statement : block
 284                              | empty_statement
 285                              | expression_statement
 286                              | selection_statement
 287                              | iteration_statement
 288                              | try_statement
 289                              | java_statement
 290                              | jump_statement
 291                              | assert_statement
 292                              | dprint_statement
 293                              | debug_statement
 294                              | time_statement
 295                              | bind_statement
 296                              | unfold_statement

 297  unfold_statement : UNFOLD cid SEMICOLON

 298  opt_formula_label : AT DOUBLEQUOTE IDENTIFIER DOUBLEQUOTE
 299                    |

 300  opt_label : DOUBLEQUOTE IDENTIFIER DOUBLEQUOTE COLON
 301            |

 302  assert_statement : ASSERT opt_label formulas SEMICOLON
 303                   | ASSUME opt_label disjunctive_constr SEMICOLON
 304                   | ASSERT opt_label formulas ASSUME disjunctive_constr SEMICOLON

 305  debug_statement : DDEBUG ON
 306                  | DDEBUG OFF

 307  time_statement : DTIME ON IDENTIFIER
 308                 | DTIME OFF IDENTIFIER

 309  dprint_statement : PRINT SEMICOLON
 310                   | PRINT DOUBLEQUOTE IDENTIFIER DOUBLEQUOTE SEMICOLON

 311  empty_statement : SEMICOLON

 312  bind_statement : BIND IDENTIFIER TO OPAREN id_list_opt CPAREN IN block

 313  id_list_opt :
 314              | id_list

 315  id_list : IDENTIFIER
 316          | id_list COMMA IDENTIFIER

 317  java_statement : JAVA

 318  expression_statement : statement_expression SEMICOLON

 319  statement_expression : invocation_expression
 320                       | object_creation_expression
 321                       | assignment_expression
 322                       | post_increment_expression
 323                       | post_decrement_expression
 324                       | pre_increment_expression
 325                       | pre_decrement_expression

 326  selection_statement : if_statement

 327  embedded_statement : valid_declaration_statement

 328  if_statement : IF OPAREN boolean_expression CPAREN embedded_statement
 329               | IF OPAREN boolean_expression CPAREN embedded_statement ELSE embedded_statement

 330  iteration_statement : while_statement

 331  while_statement : WHILE OPAREN boolean_expression CPAREN embedded_statement
 332                  | WHILE OPAREN boolean_expression CPAREN spec_list embedded_statement

 333  jump_statement : return_statement
 334                 | break_statement
 335                 | continue_statement
 336                 | raise_statement

 337  break_statement : BREAK SEMICOLON
 338                  | BREAK IDENTIFIER SEMICOLON

 339  continue_statement : CONTINUE SEMICOLON
 340                     | CONTINUE IDENTIFIER SEMICOLON

 341  return_statement : RETURN opt_expression SEMICOLON

 342  raise_statement : RAISE expression SEMICOLON

 343  try_statement : TRY valid_declaration_statement opt_catch_list opt_finally SEMICOLON

 344  opt_catch_list :
 345                 | catch_clause opt_catch_list

 346  catch_clause : CATCH OPAREN IDENTIFIER IDENTIFIER CPAREN valid_declaration_statement

 347  opt_finally :
 348              | FINALLY valid_declaration_statement

 349  opt_expression :
 350                 | expression

 351  object_creation_expression : object_or_delegate_creation_expression

 352  object_or_delegate_creation_expression : NEW IDENTIFIER OPAREN opt_argument_list CPAREN
 353                                         | NEW INT OSQUARE argument_list CSQUARE

 354  new_expression : object_or_delegate_creation_expression

 355  opt_argument_list :
 356                    | argument_list

 357  argument_list : argument
 358                | argument_list COMMA argument

 359  argument : expression

 360  expression : conditional_expression
 361             | assignment_expression

 362  constant_expression : expression

 363  boolean_expression : expression

 364  assignment_expression : prefixed_unary_expression EQ expression
 365                        | prefixed_unary_expression OP_MULT_ASSIGN expression
 366                        | prefixed_unary_expression OP_DIV_ASSIGN expression
 367                        | prefixed_unary_expression OP_MOD_ASSIGN expression
 368                        | prefixed_unary_expression OP_ADD_ASSIGN expression
 369                        | prefixed_unary_expression OP_SUB_ASSIGN expression

 370  conditional_expression : conditional_or_expression
 371                         | conditional_or_expression INTERR expression COLON expression

 372  conditional_or_expression : conditional_and_expression
 373                            | conditional_or_expression OROR conditional_and_expression

 374  conditional_and_expression : inclusive_or_expression
 375                             | conditional_and_expression ANDAND inclusive_or_expression

 376  inclusive_or_expression : exclusive_or_expression

 377  exclusive_or_expression : and_expression

 378  and_expression : equality_expression

 379  equality_expression : relational_expression
 380                      | equality_expression EQEQ relational_expression
 381                      | equality_expression NEQ relational_expression

 382  relational_expression : shift_expression
 383                        | relational_expression LT shift_expression
 384                        | relational_expression GT shift_expression
 385                        | relational_expression LTE shift_expression
 386                        | relational_expression GTE shift_expression

 387  shift_expression : additive_expression

 388  additive_expression : multiplicative_expression
 389                      | additive_expression PLUS multiplicative_expression
 390                      | additive_expression MINUS multiplicative_expression

 391  multiplicative_expression : unary_expression
 392                            | multiplicative_expression STAR prefixed_unary_expression
 393                            | multiplicative_expression DIV prefixed_unary_expression
 394                            | multiplicative_expression PERCENT prefixed_unary_expression

 395  prefixed_unary_expression : unary_expression

 396  pre_increment_expression : OP_INC prefixed_unary_expression

 397  pre_decrement_expression : OP_DEC prefixed_unary_expression

 398  post_increment_expression : primary_expression OP_INC

 399  post_decrement_expression : primary_expression OP_DEC

 400  unary_expression : unary_expression_not_plusminus
 401                   | PLUS unary_expression
 402                   | MINUS unary_expression
 403                   | pre_increment_expression
 404                   | pre_decrement_expression

 405  unary_expression_not_plusminus : postfix_expression
 406                                 | NOT prefixed_unary_expression
 407                                 | cast_expression

 408  postfix_expression : primary_expression
 409                     | post_increment_expression
 410                     | post_decrement_expression

 411  cast_expression : OPAREN expression CPAREN unary_expression_not_plusminus
 412                  | OPAREN INT CPAREN unary_expression
 413                  | OPAREN BOOL CPAREN unary_expression
 414                  | OPAREN FLOAT CPAREN unary_expression

 415  invocation_expression : qualified_identifier OPAREN opt_argument_list CPAREN
 416                        | IDENTIFIER OPAREN opt_argument_list CPAREN

 417  qualified_identifier : primary_expression DOT IDENTIFIER

 418  member_access : primary_expression DOT IDENTIFIER

 419  literal : boolean_literal
 420          | integer_literal
 421          | real_literal
 422          | NULL

 423  real_literal : LITERAL_FLOAT

 424  integer_literal : LITERAL_INTEGER

 425  boolean_literal : TRUE
 426                  | FALSE

 427  primary_expression : parenthesized_expression
 428                     | primary_expression_no_parenthesis

 429  parenthesized_expression : OPAREN expression CPAREN

 430  primary_expression_no_parenthesis : literal
 431                                    | member_name
 432                                    | member_access
 433                                    | invocation_expression
 434                                    | new_expression
 435                                    | arrayaccess_expression

 436  arrayaccess_expression : IDENTIFIER OSQUARE expression CSQUARE

 437  member_name : IDENTIFIER
 438              | THIS

 439  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (439)
	opt_decl_list : .  (2)

	BOOL  shift 3
	CLASS  shift 4
	COERCION  shift 5
	DATA  shift 6
	ENUM  shift 7
	FLOAT  shift 8
	IDENTIFIER  shift 9
	INT  shift 10
	REL  shift 11
	VOID  shift 12
	GLOBAL  shift 13
	$end  reduce 2

	program  goto 14
	opt_decl_list  goto 15
	decl_list  goto 16
	decl  goto 17
	type_decl  goto 18
	rel_decl  goto 19
	global_var_decl  goto 20
	proc_decl  goto 21
	coercion_decl  goto 22
	data_decl  goto 23
	class_decl  goto 24
	enum_decl  goto 25
	view_decl  goto 26
	typ  goto 27
	data_header  goto 28
	enum_header  goto 29
	view_header  goto 30
	rel_header  goto 31
	proc_header  goto 32
	non_array_type  goto 33
	array_type  goto 34


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	non_array_type : BOOL .  (251)

	.  reduce 251


state 4
	class_decl : CLASS . IDENTIFIER extends_opt OBRACE member_list_opt CBRACE  (16)

	IDENTIFIER  shift 35
	.  error


state 5
	coercion_decl : COERCION . opt_name disjunctive_constr coercion_direction disjunctive_constr SEMICOLON  (209)
	opt_name : .  (215)

	DOUBLEQUOTE  shift 36
	error  reduce 215
	ALLN  reduce 215
	APPEND  reduce 215
	DIFF  reduce 215
	EXISTS  reduce 215
	FALSE  reduce 215
	FORALL  reduce 215
	HEAD  reduce 215
	IDENTIFIER  reduce 215
	LENGTH  reduce 215
	LITERAL_FLOAT  reduce 215
	LITERAL_INTEGER  reduce 215
	BAGMAX  reduce 215
	BAGMIN  reduce 215
	INTERSECT  reduce 215
	MAX  reduce 215
	MINUS  reduce 215
	MIN  reduce 215
	NOT  reduce 215
	NULL  reduce 215
	OBRACE  reduce 215
	OLIST  reduce 215
	OPAREN  reduce 215
	PERM  reduce 215
	REVERSE  reduce 215
	RES  reduce 215
	SELF  reduce 215
	TAIL  reduce 215
	THIS  reduce 215
	TRUE  reduce 215
	UNION  reduce 215

	opt_name  goto 37


state 6
	data_header : DATA . IDENTIFIER  (28)

	IDENTIFIER  shift 38
	.  error


state 7
	enum_header : ENUM . IDENTIFIER  (37)

	IDENTIFIER  shift 39
	.  error


state 8
	non_array_type : FLOAT .  (250)

	.  reduce 250


state 9
	view_header : IDENTIFIER . LT opt_ann_cid_list GT  (54)
	non_array_type : IDENTIFIER .  (252)

	LT  shift 40
	IDENTIFIER  reduce 252
	OSQUARE  reduce 252


state 10
	non_array_type : INT .  (249)

	.  reduce 249


state 11
	rel_header : REL . IDENTIFIER OPAREN typed_id_list_opt CPAREN  (200)

	IDENTIFIER  shift 41
	.  error


state 12
	proc_header : VOID . IDENTIFIER OPAREN opt_formal_parameter_list CPAREN opt_throws opt_spec_list  (205)

	IDENTIFIER  shift 42
	.  error


state 13
	global_var_decl : GLOBAL . local_variable_type variable_declarators SEMICOLON  (15)

	BOOL  shift 3
	FLOAT  shift 8
	IDENTIFIER  shift 43
	INT  shift 10
	.  error

	local_variable_type  goto 44
	typ  goto 45
	non_array_type  goto 33
	array_type  goto 34


state 14
	%entry% : '\001' program .  (439)

	.  reduce 439


state 15
	program : opt_decl_list .  (1)

	.  reduce 1


state 16
	opt_decl_list : decl_list .  (3)
	decl_list : decl_list . decl  (5)

	BOOL  shift 3
	CLASS  shift 4
	COERCION  shift 5
	DATA  shift 6
	ENUM  shift 7
	FLOAT  shift 8
	IDENTIFIER  shift 9
	INT  shift 10
	REL  shift 11
	VOID  shift 12
	GLOBAL  shift 13
	$end  reduce 3

	decl  goto 46
	type_decl  goto 18
	rel_decl  goto 19
	global_var_decl  goto 20
	proc_decl  goto 21
	coercion_decl  goto 22
	data_decl  goto 23
	class_decl  goto 24
	enum_decl  goto 25
	view_decl  goto 26
	typ  goto 27
	data_header  goto 28
	enum_header  goto 29
	view_header  goto 30
	rel_header  goto 31
	proc_header  goto 32
	non_array_type  goto 33
	array_type  goto 34


state 17
	decl_list : decl .  (4)

	.  reduce 4


state 18
	decl : type_decl .  (6)

	.  reduce 6


state 19
	decl : rel_decl .  (7)

	.  reduce 7


state 20
	decl : global_var_decl .  (8)

	.  reduce 8


state 21
	decl : proc_decl .  (9)

	.  reduce 9


state 22
	decl : coercion_decl .  (10)

	.  reduce 10


state 23
	type_decl : data_decl .  (11)

	.  reduce 11


state 24
	type_decl : class_decl .  (12)

	.  reduce 12


state 25
	type_decl : enum_decl .  (13)

	.  reduce 13


state 26
	type_decl : view_decl .  (14)

	.  reduce 14


state 27
	proc_header : typ . IDENTIFIER OPAREN opt_formal_parameter_list CPAREN opt_throws opt_spec_list  (204)

	IDENTIFIER  shift 47
	.  error


state 28
	data_decl : data_header . data_body  (27)

	OBRACE  shift 48
	.  error

	data_body  goto 49


state 29
	enum_decl : enum_header . enum_body  (36)

	OBRACE  shift 50
	.  error

	enum_body  goto 51


state 30
	view_decl : view_header . EQEQ view_body opt_inv SEMICOLON  (43)
	view_decl : view_header . EQ error  (44)

	EQ  shift 52
	EQEQ  shift 53
	.  error


state 31
	rel_decl : rel_header . EQEQ rel_body DOT  (195)
	rel_decl : rel_header . EQ error  (196)

	EQ  shift 54
	EQEQ  shift 55
	.  error


state 32
	proc_decl : proc_header . proc_body  (202)
	proc_decl : proc_header .  (203)

	OBRACE  shift 56
	$end  reduce 203
	BOOL  reduce 203
	CBRACE  reduce 203
	CLASS  reduce 203
	COERCION  reduce 203
	DATA  reduce 203
	ENUM  reduce 203
	FLOAT  reduce 203
	IDENTIFIER  reduce 203
	INT  reduce 203
	INV  reduce 203
	REL  reduce 203
	VOID  reduce 203
	GLOBAL  reduce 203

	proc_body  goto 57
	block  goto 58


state 33
	typ : non_array_type .  (247)
	array_type : non_array_type . rank_specifier  (254)

	OSQUARE  shift 59
	IDENTIFIER  reduce 247

	rank_specifier  goto 60


state 34
	typ : array_type .  (248)
	array_type : array_type . rank_specifier  (253)

	OSQUARE  shift 59
	IDENTIFIER  reduce 248

	rank_specifier  goto 61


state 35
	class_decl : CLASS IDENTIFIER . extends_opt OBRACE member_list_opt CBRACE  (16)
	extends_opt : .  (17)

	EXTENDS  shift 62
	OBRACE  reduce 17

	extends_opt  goto 63


state 36
	opt_name : DOUBLEQUOTE . IDENTIFIER DOUBLEQUOTE  (216)

	IDENTIFIER  shift 64
	.  error


state 37
	coercion_decl : COERCION opt_name . disjunctive_constr coercion_direction disjunctive_constr SEMICOLON  (209)

	error  shift 65
	ALLN  shift 66
	APPEND  shift 67
	DIFF  shift 68
	EXISTS  shift 69
	FALSE  shift 70
	FORALL  shift 71
	HEAD  shift 72
	IDENTIFIER  shift 73
	LENGTH  shift 74
	LITERAL_FLOAT  shift 75
	LITERAL_INTEGER  shift 76
	BAGMAX  shift 77
	BAGMIN  shift 78
	INTERSECT  shift 79
	MAX  shift 80
	MINUS  shift 81
	MIN  shift 82
	NOT  shift 83
	NULL  shift 84
	OBRACE  shift 85
	OLIST  shift 86
	OPAREN  shift 87
	PERM  shift 88
	REVERSE  shift 89
	RES  shift 90
	SELF  shift 91
	TAIL  shift 92
	THIS  shift 93
	TRUE  shift 94
	UNION  shift 95
	.  error

	disjunctive_constr  goto 96
	pure_constr  goto 97
	cid  goto 98
	cexp  goto 99
	one_constr  goto 100
	core_constr  goto 101
	heap_constr  goto 102
	heap_rw  goto 103
	simple_heap_constr_imm  goto 104
	heap_wr  goto 105
	simple_heap_constr  goto 106
	simple_pure_constr  goto 107
	lbconstr  goto 108
	bconstr  goto 109
	cexp_list  goto 110
	additive_cexp  goto 111
	multiplicative_cexp  goto 112
	unary_cexp  goto 113
	cexp_list_rec  goto 114


state 38
	data_header : DATA IDENTIFIER .  (28)

	.  reduce 28


state 39
	enum_header : ENUM IDENTIFIER .  (37)

	.  reduce 37


state 40
	view_header : IDENTIFIER LT . opt_ann_cid_list GT  (54)
	opt_branch : .  (51)
	opt_ann_cid_list : .  (74)

	DOUBLEQUOTE  shift 115
	GT  reduce 74
	IDENTIFIER  reduce 51
	RES  reduce 51
	SELF  reduce 51
	THIS  reduce 51

	opt_branch  goto 116
	opt_ann_cid_list  goto 117
	ann_cid_list  goto 118
	ann_cid  goto 119


state 41
	rel_header : REL IDENTIFIER . OPAREN typed_id_list_opt CPAREN  (200)

	OPAREN  shift 120
	.  error


state 42
	proc_header : VOID IDENTIFIER . OPAREN opt_formal_parameter_list CPAREN opt_throws opt_spec_list  (205)

	OPAREN  shift 121
	.  error


state 43
	non_array_type : IDENTIFIER .  (252)

	.  reduce 252


state 44
	global_var_decl : GLOBAL local_variable_type . variable_declarators SEMICOLON  (15)

	IDENTIFIER  shift 122
	.  error

	variable_declarators  goto 123
	variable_declarator  goto 124


state 45
	local_variable_type : typ .  (270)

	.  reduce 270


state 46
	decl_list : decl_list decl .  (5)

	.  reduce 5


state 47
	proc_header : typ IDENTIFIER . OPAREN opt_formal_parameter_list CPAREN opt_throws opt_spec_list  (204)

	OPAREN  shift 125
	.  error


state 48
	data_body : OBRACE . opt_field_list CBRACE  (29)
	opt_field_list : .  (30)

	BOOL  shift 3
	FLOAT  shift 8
	IDENTIFIER  shift 43
	INT  shift 10
	CBRACE  reduce 30

	typ  goto 126
	opt_field_list  goto 127
	field_list  goto 128
	non_array_type  goto 33
	array_type  goto 34

